--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "scripts": {
     "dev": "vite",
     "serve": "vite",
-    "build:dev": "vue && vite build --mode development",
-    "build:test": "vue && vite build --mode test",
-    "build:pro": "vue && vite build --mode production",
+    "build:dev": "vite build --mode development",
+    "build:test": "vite build --mode test",
+    "build:pro": "vite build --mode production",
     "type:check": "vue --noEmit --skipLibCheck",
     "preview": "pnpm build:dev && vite preview",
-    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
-    "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:eslint": "eslint --fix --ext .js,.vue ./src",
+    "lint:prettier": "prettier --write \"src/**/*.{js,json,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged",
     "prepare": "husky install",
@@ -44,7 +44,7 @@
     "driver.js": "^1.3.1",
     "echarts": "^5.5.1",
     "echarts-liquidfill": "^3.1.0",
-    "element-plus": "^2.7.6",
+    "element-plus": "^2.8.0",
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
@@ -65,13 +65,6 @@
     "@babel/preset-env": "^7.25.3",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@types/md5": "^2.3.5",
-    "@types/nprogress": "^0.2.3",
-    "@types/qs": "^6.9.15",
-    "@types/sortablejs": "^1.15.8",
-    "@types/vue": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "autoprefixer": "^10.4.19",
@@ -81,7 +74,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue": "^9.27.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
@@ -104,8 +97,7 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.3.5",
-    "vue-tsc": "^2.0.22"
+    "vite-plugin-vue-devtools": "^7.3.5"
   },
   "engines": {
     "node": ">=16.18.0"
